# fastapi_project_template

./: README.md  docker-compose.yml  pyproject.toml
src/: .env.template  main.py
src/alembic/versions/: 2024_06_28_1700-3759194b9adf_create_user_table.py  2024_09_17_1741-1c4f73797079_create_user_table.py  2024_09_17_1752-f213a7be30fa_create_users_table.py  2024_09_17_1754-477320b44ab7_update_users_table.py  2024_09_18_1014-0c583132ad89_update_users_table.py
src/api/: __init__.py
src/api/v1/: __init__.py  users.py
src/core/: config.py
src/core/models/: __init__.py  base.py  db_helper.py  user.py
src/crud/: users.py
src/utils/: case_converter.py
